table_1/results/Meal-Planner_post_nullaway.txt
/opt/table_1/versions/nullaway/mealplanner-post/src/src/main/java/de/zuellich/meal_planner/controller/PinterestExplorer.java:81: error: [NullAway] dereferenced expression e.getCause() is @Nullable
          System.out.println("!! Error downloading pin: " + e.getCause().getMessage());
                                                                        ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/mealplanner-post/src/src/main/java/de/zuellich/meal_planner/algorithms/IngredientUnitLookup.java:13: error: [NullAway] assigning @Nullable expression to @NonNull field
   private static IngredientUnitLookup instance = null;
                                       ^
    (see http://t.uber.com/nullaway )
/opt/table_1/versions/nullaway/mealplanner-post/src/src/main/java/de/zuellich/meal_planner/algorithms/NullParser.java:9: error: [NullAway] @NonNull field object not initialized
  Object object;
         ^
    (see http://t.uber.com/nullaway )
Note: /opt/table_1/versions/nullaway/mealplanner-post/src/src/main/java/de/zuellich/meal_planner/config/WebConfig.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /opt/table_1/versions/nullaway/mealplanner-post/src/src/main/java/de/zuellich/meal_planner/pinterest/datatypes/Pin.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 665ms
3
